chore(design): work on design, styles

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -31,7 +31,8 @@
 
   <footer class="page">
     <div>
-      Powered by <a href="http://camunda.org">camunda BPM</a> / <span class="version">v${project.version}</span>
+      Powered by <a href="http://camunda.org">camunda BPM</a> /
+      <span class="version">v${project.version}</span>
     </div>
   </footer>
 
