--- a/client/client/scripts/pile/form.html
+++ b/client/client/scripts/pile/form.html
@@ -1,7 +1,6 @@
 <form class="form-horizontal"
       role="form"
-      name="newPile"
-      ng-controller="pileNewCtrl">
+      name="newPile">
   <div class="row">
     <div class="col-xs-8">
       <div class="form-group">
