--- a/client/client/scripts/pile/list.html
+++ b/client/client/scripts/pile/list.html
@@ -1,6 +1,9 @@
 <div ng-controller="pilesCtrl">
   <div ng-show="loading"
-       class="loader">Loading...</div>
+       class="loader">
+    <i class="animate-spin glyphicon glyphicon-refresh"></i>
+    Loading...
+  </div>
 
   <div ng-hide="loading"
        ng-repeat="pile in piles"
