--- a/client/client/scripts/pile/tasks.html
+++ b/client/client/scripts/pile/tasks.html
@@ -12,10 +12,13 @@
             first-text="&laquo;"></pagination>
 
 <div ng-show="loading"
-     class="loader">Loading...</div>
+     class="loader">
+  <i class="animate-spin glyphicon glyphicon-refresh"></i>
+  Loading...
+</div>
 
 <div ng-hide="loading">
-  <div ng-hide="totalItems">
+  <div ng-hide="totalItems" class="no-match">
     No task macthing filters found.
   </div>
 
@@ -27,7 +30,10 @@
         <h4 ng-click="focus(delta)">{{ task.name }}</h4>
         <ul class="list-inline">
           <li>
-            <input type="checkbox" name="batch" ng-model="batch" ng-change="batchOperationSelect()" />
+            <input type="checkbox"
+                   name="batch"
+                   ng-model="batch"
+                   ng-change="batchOperationSelect()" />
           </li>
           <li data-toggle="tooltip"
               data-placement="top"
