--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -86,17 +86,18 @@
 
       <div class="row task-board">
         <div class="cols col-sm-2 task-piles">
-          <div class="inner">
-            <div cam-tasklist-piles></div>
-          </div>
+          <div class="inner"
+               cam-tasklist-piles></div>
         </div>
 
         <div class="cols col-sm-4 task-list">
-          <div cam-tasklist-pile-tasks></div>
+          <div class="inner"
+               cam-tasklist-pile-tasks></div>
         </div>
 
         <div class="cols col-sm-6 current-task">
-          <div cam-tasklist-task></div>
+          <div class="inner"
+               cam-tasklist-task></div>
         </div>
       </div>
     </div>
