--- a/client/client/index.html
+++ b/client/client/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>camunda Tasklist</title>
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="description" content="camunda Tasklist" />
+  <meta name="author" content="camunda services GmbH" />
 
   <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <!-- Le styles -->
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -44,10 +45,10 @@
 
   <script type="text/javascript" src="scripts/deps.js" data-main="scripts/camunda-tasklist-ui"></script>
 
-  <!-- #prod-remove -->
+  <!-- #production-remove -->
   <script type="text/javascript">
-  document.write('<s'+'cript src="//'+ location.hostname +':'+ (parseInt(location.port, 10)+1) +'/livereload.js?snipver=1"><'+'/script>')
+  document.write('<s'+'cript src="//'+ location.hostname +':LIVERELOAD_PORT/livereload.js?snipver=1"><'+'/script>')
   </script>
-  <!-- /prod-remove -->
+  <!-- /production-remove -->
 </body>
 </html>
