--- a/client/client/scripts/navigation/navigation.html
+++ b/client/client/scripts/navigation/navigation.html
@@ -30,20 +30,30 @@
               </a>
             </li>
 
-            <li class="user-account">
+            <li class="user-account dropdown">
               <a tooltip-placement="bottom"
                  tooltip="Manage your account"
-                 ng-href="/camunda/app/admin/default/#/users/{{ user.id }}?tab=profile">
+                 href
+                 class="dropdown-toggle"
+                 data-toggle="dropdown">
                 <i class="glyphicon glyphicon-user"></i>
                 {{ user.id }}
               </a>
-            </li>
-            <li>
-              <a tooltip-placement="bottom"
-                 tooltip="Log out"
-                 href="#/logout">
-                <i class="glyphicon glyphicon-off"></i>
-              </a>
+              <ul class="dropdown-menu">
+                <li class="user-profile">
+                  <a ng-href="/camunda/app/admin/default/#/users/{{ user.id }}?tab=profile">
+                    My Profile
+                  </a>
+                </li>
+
+                <li class="divider"></li>
+
+                <li class="sign-out">
+                  <a href="#/logout">
+                    Sign out
+                  </a>
+                </li>
+              </ul>
             </li>
 
 
