chore(form): load start process forms

--- a/client/client/scripts/process/start.html
+++ b/client/client/scripts/process/start.html
@@ -53,7 +53,7 @@
     </div>
 
     <div ng-if="startingProcess"
-         class="starting-process">
+         class="starting-process start-form-container">
       <h4>
         {{ startingProcess.name || startingProcess.key }}
       </h4>
