refactor(align): align the project with the others

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -7,16 +7,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="description" content="camunda Admin" />
     <meta name="author" content="camunda services GmbH" />
 
     <!-- settings the base path for relative links -->
     <base href="$BASE" admin-api="$APP_ROOT/api/admin/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
+    <!-- an example of plugin/feature exclusion -->
+    <!--
+    <base href="$BASE"
+          admin-api="$APP_ROOT/api/admin/"
+          engine-api="$APP_ROOT/api/engine/"
+          app-root="$APP_ROOT"
+          cam-exclude-plugins="admin.dashboard:process-definition-tiles" />
+    -->
 
-    <!-- Styles -->
+
+    <!-- styles -->
     <link href="$APP_ROOT/app/admin/styles/styles.css?bust=CACHE_BUSTER" rel="stylesheet" />
 
-    <!-- Favicon -->
-    <link href="$APP_ROOT/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <!-- favicon -->
+    <link href="$APP_ROOT/app/admin/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- scripts -->
 
@@ -25,9 +35,10 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if IE]>
-        <link href="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.htc" rel="htc"/>
-        <script src="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.js"></script>
+        <link href="$APP_ROOT/vendor/better-dom/dist/better-dom-legacy.htc" rel="htc"/>
+        <script src="$APP_ROOT/vendor/better-dom/dist/better-dom-legacy.js"></script>
     <![endif]-->
+
     <script src="$APP_ROOT/app/admin/assets/vendor/requirejs/index.js"></script>
 
     <script src="$APP_ROOT/app/admin/admin-bootstrap.js?bust=CACHE_BUSTER"></script>
@@ -71,7 +82,7 @@
           Powered by <a href="http://camunda.org">camunda BPM</a> / <span class="version">v${project.version}</span>
         </div>
       </footer>
-    </div> 
+    </div>
     <script src="$APP_ROOT/app/admin/assets/vendor/better-dom/dist/better-dom.js"></script>
     <script src="$APP_ROOT/app/admin/assets/vendor/better-placeholder-polyfill/dist/better-placeholder-polyfill.js"></script>
   </body>
