--- a/client/client/scripts/navigation/navigation.html
+++ b/client/client/scripts/navigation/navigation.html
@@ -18,10 +18,10 @@
         <div class="collapse navbar-collapse"
              id="cam-tasklist-navigation">
           <ul class="nav navbar-nav navbar-right"
-              ng-if="user.id">
+              ng-if="username">
 
             <li>
-              <a tooltip-placement="bottom"
+              <a tooltip-placement="left"
                  tooltip="Start a process"
                  ng-controller="processStartCtrl"
                  ng-click="openProcessStartModal()"
@@ -31,17 +31,17 @@
             </li>
 
             <li class="user-account dropdown">
-              <a tooltip-placement="bottom"
+              <a tooltip-placement="left"
                  tooltip="Manage your account"
                  href
                  class="dropdown-toggle"
                  data-toggle="dropdown">
                 <i class="glyphicon glyphicon-user"></i>
-                {{ user.id }}
+                {{ username }}
               </a>
               <ul class="dropdown-menu">
                 <li class="user-profile">
-                  <a ng-href="/camunda/app/admin/default/#/users/{{ user.id }}?tab=profile">
+                  <a ng-href="{{ tasklistbase }}/{{ engine }}/#/users/{{ username }}?tab=profile">
                     My Profile
                   </a>
                 </li>
@@ -66,7 +66,8 @@
               <a ng-if="!link.links || !link.links.length"
                  href="{{ link.href }}">
                 {{ link.title }}
-                <i class="glyphicon glyphicon-{{ link.icon }}"></i>
+                <i ng-if="link.icon"
+                   class="glyphicon glyphicon-{{ link.icon }}"></i>
               </a>
 
               <a ng-if="link.links && link.links.length"
@@ -91,9 +92,9 @@
             </li>
           </ul>
 
-          <ul class="nav navbar-nav navbar-right" ng-if="!user.id">
+          <ul class="nav navbar-nav navbar-right" ng-if="!username">
             <li>
-              <a tooltip-placement="bottom"
+              <a tooltip-placement="left"
                  tooltip="Log in"
                  href="#/login">
                 <i class="glyphicon glyphicon-log-in"></i>
