refactor(misc): little changes

--- a/client/client/scripts/pile/tasks.html
+++ b/client/client/scripts/pile/tasks.html
@@ -19,7 +19,7 @@
          ng-model="searchTask"
          placeholder="Task name"
          tooltip="Search by task name, case sensitive."
-         tooltip-placement="left"
+         tooltip-placement="top"
          typeahead="filteredTask.name for filteredTask in lookupTask($viewValue)"
          typeahead-loading="loadingTasks"
          typeahead-wait-ms="100"
