--- a/client/client/scripts/user/login.html
+++ b/client/client/scripts/user/login.html
@@ -11,6 +11,8 @@
     <div class="row">
       <div class="col-md-6 col-sm-12">
 
+        <div notifications-panel class="notifications-panel"></div>
+
         <div class="form-group">
           <!-- <label for="userLoginInputUsername">User name</label> -->
           <input required
