--- a/client/webapp/src/main/webapp/develop/invoice/start.html
+++ b/client/webapp/src/main/webapp/develop/invoice/start.html
@@ -1,31 +1,33 @@
-<form cam-form role="form">
+<form role="form" name="form">
   <div class="form-group">
     <label for="firstname">First name</label>
-    <input cam-variable-name="firstname"
+    <input cam-variable-name="FIRSTNAME"
+           cam-variable-type="String"
+           ng-model="modelProp"
            type="text"
            class="form-control"
-           id="firstname">
+           required
+           id="firstname"
+           name="firstname">
+
+     <span ng-show="form.firstname.$invalid">Tell us your Firstname.</span>
+     <span ng-show="form.firstname.$valid">Good job: '{{modelProp}}' is a valid Firstname.</span>
+
   </div>
   <div class="form-group">
     <label for="lastname">Last name</label>
-    <input cam-variable-name="lastname"
-           value="Pustermann"
+    <input cam-variable-name="LASTNAME"
+           cam-variable-type="String"
            type="text"
            class="form-control"
+           value="Pusterman"
            id="lastname">
-  </div>
-
-  <div class="form-group">
-    <label for="stringVar">A string</label>
-    <input cam-variable-name="stringVar"
-           type="text"
-           class="form-control"
-           id="stringVar">
   </div>
 
   <div class="form-group">
     <label for="longStringVar">A longer string</label>
     <textarea cam-variable-name="longStringVar"
+              cam-variable-type="String"
               cols="30"
               rows="10"
               class="form-control"
@@ -54,10 +56,4 @@
     </select>
   </div>
 
-  <!--
-  <div>
-    <button type="button">Cancel</button>
-    <button type="submit">Submit</button>
-  </div>
-  -->
 </form>
