chore(scaffolding): move tasks directives to a sub-folder and cleanup

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -11,7 +11,11 @@
   <meta name="author" content="camunda services GmbH" />
 
   <!--< base href="/" /> -->
-  <base href="$BASE" admin-api="$APP_ROOT/api/admin/" engine-api="$APP_ROOT/api/engine/" app-root="$APP_ROOT" />
+  <base href="$BASE"
+        admin-api="$APP_ROOT/api/admin/"
+        engine-api="$APP_ROOT/api/engine/"
+        app-root="$APP_ROOT"
+        app-name="tasklist" />
 
   <link rel="stylesheet" type="text/css" href="$APP_ROOT/app/tasklist/styles/styles.css">
 
