refactor(directives): move the directives in their own sub-folder

--- a/client/client/scripts/pile/directives/cam-tasklist-piles.html
+++ b/client/client/scripts/pile/directives/cam-tasklist-piles.html
@@ -2,7 +2,7 @@
   <div ng-show="loading"
        class="loader">
     <i class="animate-spin glyphicon glyphicon-refresh"></i>
-    Loading...
+    {{ 'LOADING' | translate }}
   </div>
 
   <div ng-hide="loading"
