feat(task sorting): add controls to sort tasks

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -35,43 +35,7 @@
               </div>
               <div class="col-xs-6 dropdown sorting">
               -->
-                <a href
-                   data-toggle="dropdown">Sort by <span class="sort-by">Due date</span></a>
-
-                <a href
-                   class="sort-direction glyphicon glyphicon-chevron-up"></a>
-
-                <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                  <li role="presentation">
-                    <a role="menuitem"
-                       tabindex="-1"
-                       href>Due date</a>
-                  </li>
-
-                  <li role="presentation">
-                    <a role="menuitem"
-                       tabindex="-1"
-                       href>Follow up date</a>
-                  </li>
-
-                  <li role="presentation">
-                    <a role="menuitem"
-                       tabindex="-1"
-                       href>Task name</a>
-                  </li>
-
-                  <li role="presentation">
-                    <a role="menuitem"
-                       tabindex="-1"
-                       href>Assignee</a>
-                  </li>
-                  <li role="presentation">
-                    <a role="menuitem"
-                       tabindex="-1"
-                       href>Owner</a>
-                  </li>
-
-                </ul>
+                <div cam-sorting-choices></div>
               </div>
             </div>
           </div>
